%% Team271-Lib — AutoMove Composition / Class Hierarchy
%% Source of truth: ADR-013 (composition over commands),
%%                  ADR-012 (mandatory timeouts),
%%                  ADR-014 (PathPlanner + Choreo trajectory abstraction)

classDiagram
    class AutoMove
    class AutoMoveTimed
    class AutoMoveConditional
    class AutoMoveSequence
    class AutoMoveParallel
    class WaitMove
    class AutoMode
    class CommandBridge
    class PathPlannerCommand
    class Trajectory
    class TrajectorySample
    class TrajectoryFollower
    class PathPlannerFollower
    class ChoreoFollower

    AutoMoveTimed --|> AutoMove
    AutoMoveConditional --|> AutoMove
    AutoMoveSequence --|> AutoMove
    AutoMoveParallel --|> AutoMove
    WaitMove --|> AutoMoveTimed

    AutoMoveSequence o-- AutoMove
    AutoMoveParallel o-- AutoMove
    AutoMode o-- AutoMove
    CommandBridge ..> AutoMove
    CommandBridge ..> PathPlannerCommand

    PathPlannerFollower ..|> TrajectoryFollower
    ChoreoFollower ..|> TrajectoryFollower
    TrajectoryFollower ..> AutoMove : produces
    TrajectoryFollower ..> Trajectory : samples
    Trajectory ..> TrajectorySample : yields
